# change-point-detection

./: pyproject.toml
src/: main.py
src/knncpd/: knncpd.py  knngraph.py
src/utils/: observation.py  observation_heap.py
